#ifndef FSOFT2026_1DD_1_VACCINECONTROLLER_H
#define FSOFT2026_1DD_1_VACCINECONTROLLER_H

#include "../model/HealthcareCenter.h"
#include <string>
#include <vector>
#include <map>

class VaccineType;
class Vaccine;

class VaccineController {
private:
    HealthcareCenter* hc;

public:
    VaccineController(HealthcareCenter* hc);

    // UC1
    bool createVaccineType(
            std::string code,
            std::string disease,
            std::string technology,
            int recoveryPeriod);

    // UC2
    std::vector<VaccineType*> getVaccineCatalog();
    std::vector<Vaccine*> getInventory();

    bool registerVaccine(
            int typeIndex,
            std::string commercialName,
            std::string brand,
            std::string lot,
            std::string expiry,
            int qty);

    bool adjustVaccineQuantity(const std::string& lotNumber, int newQuantity);

    // UC3
    std::map<VaccineType*, std::vector<Vaccine*>> getVaccineStockGroupedAndSorted();
};

#endif //FSOFT2026_1DD_1_VACCINECONTROLLER_H
