#ifndef FSOFT2026_1DD_1_CENTERADMINISTRATOR_H
#define FSOFT2026_1DD_1_CENTERADMINISTRATOR_H

#include "Employee.h"
class CenterAdministrator : public Employee {
public:
    CenterAdministrator(std::string n, std::string p, std::string e, std::string cc);
    std::string getRole() const override;

};

#endif //FSOFT2026_1DD_1_CENTERADMINISTRATOR_H\