//
// Created by pc-andre on 4/26/26.
//

#ifndef FSOFT2026_1DD_1_MAINMENU_H
#define FSOFT2026_1DD_1_MAINMENU_H


class MainMenu
{
};


#endif //FSOFT2026_1DD_1_MAINMENU_H