@startuml DesignClassDiagram
title Design Class Diagram - MedManager
skinparam classAttributeIconSize 0
hide circle


skinparam nodesep 60
skinparam ranksep 80

class MainMenu {
    + mainMenu(): void
    + menuCenterAdministrator(): void
    + clearScreen(): void
    + readInt(prompt: string, min: int, max: int): int
}

together {


class VaccineController {
    + createVaccineType(code: string, disease: string, tech: string, recPeriod: int): bool
    + registerVaccine(typeIndex: int, brand: string, lot: string, expiry: string, qty: int): bool
    + getVaccineStockGroupedAndSorted(): map<VaccineType*, vector<Vaccine*>>
    + adjustVaccineQuantity(lotNumber: string, newQuantity: int): bool
}

class EmployeeController {
    + registerEmployee(role: int, id: string, name: string, address: string, phone: string, email: string, cc: string): bool
    + getEmployeesByRole(role: int): vector<Employee*>
    + updateEmployee(cc: string, newPhone: string, newEmail: string): bool
}

class AppointmentController {
    + createAppointment(snsNumber: string, typeIndex: int, date: string, time: string): bool
    + checkUserExists(snsNumber: string): bool
    + hasPendingAppointment(snsNumber: string, typeIndex: int): bool
}

class NurseController {
    + getWaitingRoomUsers(): vector<SNSUser*>
    + getRecoveryRoomUsers(): vector<SNSUser*>
    + recordAdministration(snsNumber: string, lotNumber: string): bool
    + dischargeUser(snsNumber: string): bool
    + {static} currentTimestamp(): string
}

class ExportController {
    + exportReport(listType: string): bool
}
}

class HealthcareCenter {
    - name: string
    - address: string
    - phone: string
    - email: string
    + addVaccineType(vt: VaccineType*): bool
    + addVaccineToInventory(v: Vaccine*): bool
    + addEmployee(emp: Employee*): bool
    + registerSNSUser(user: SNSUser*): bool
    + addAppointment(appt: Appointment*): bool
    + addArrivalAndQueueUser(arr: Arrival*, user: SNSUser*): bool
    + moveToRecoveryRoom(user: SNSUser*): bool
    + dischargeUserFromRecoveryRoom(snsNumber: string): bool
    + getWaitingRoom(): vector<SNSUser*>
    + getInventory(): vector<Vaccine*>
    + getEmployees(): vector<Employee*>
    + getRecoveryRoom(): vector<SNSUser*>
}

class Employee {
    - name: string
    - phone: string
    - email: string
    - citizenCard: string
    + getName(): string
    + getPhone(): string
    + getEmail(): string
    + setPhone(phone: string): void
    + setEmail(email: string): void
    + getRole(): string <<virtual>>
}

class CenterAdministrator extends Employee
class Nurse extends Employee
class Receptionist extends Employee

class VaccineType {
    - code: string
    - disease: string
    - technology: string
    - recoveryPeriod: int
    + getCode(): string
}

class Vaccine {
    - brand: string
    - lotNumber: string
    - expirationDate: string
    - quantity: int
    + decreaseQuantity(amount: int): void
    + setQuantity(qty: int): void
}

class SNSUser {
    - snsNumber: string
    - name: string
    - address: string
    - birthdate: string
    - phone: string
    - sex: string
    - citizenCardNumber: string
    + getSnsNumber(): string
    + getName(): string
    + setAddress(address: string): void
    + setPhone(phone: string): void
}

class Appointment {
    - date: string
    - time: string
    - status: string
    + setStatus(status: string): void
}

class Arrival {
    - arrivalTime: string
}

class VaccinationProcess {
    - timestamp: string
}


MainMenu ..> VaccineController : uses >
MainMenu ..> EmployeeController : uses >
MainMenu ..> AppointmentController : uses >
MainMenu ..> NurseController : uses >
MainMenu ..> ExportController : uses >

VaccineController --> "1" HealthcareCenter : updates >
EmployeeController --> "1" HealthcareCenter : updates >
AppointmentController --> "1" HealthcareCenter : updates >
NurseController --> "1" HealthcareCenter : updates/reads >
ExportController --> "1" HealthcareCenter : reads >

HealthcareCenter "1" o-down- "0..*" Employee : employs >
HealthcareCenter "1" o-down- "0..*" VaccineType : catalog >
HealthcareCenter "1" o-down- "0..*" Vaccine : inventory >
HealthcareCenter "1" o-down- "0..*" SNSUser : registry >
HealthcareCenter "1" o-down- "0..*" SNSUser : waitingRoom >
HealthcareCenter "1" o-down- "0..*" SNSUser : recoveryRoom >
HealthcareCenter "1" o-down- "0..*" Appointment : schedule >

Vaccine "0..*" -right- "1" VaccineType : is of >
Appointment "0..*" -right- "1" SNSUser : for >
Appointment "0..*" -left- "1" VaccineType : refers to >
Arrival "0..*" -right- "1" Appointment : linked to >
VaccinationProcess "0..*" -right- "1" Vaccine : uses >

@enduml